--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@
   gap: 10px;
   padding: 52px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: flex-start;
   margin: 0px;
@@ -133,8 +133,8 @@
 }
 
 .container__home--img {
+  display: flex;
   width: 50%;
-  position: absolute;
   bottom: 0px;
   right: 0px;
 }
@@ -162,7 +162,7 @@
   height: 100dvh;
   display: flex;
   gap: 0px;
-  padding: 85px 60px;
+  padding: 50px 60px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -187,31 +187,33 @@
   height: 100dvh;
   display: flex;
   gap: 0px;
-  padding: 40px 60px;
+  padding: 0px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: normal;
-  font-family: "Poppins";
-  font-size: 20px !important;
-  color: #1E1E1E !important;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  margin: 0px;
 }
 .container__sobreMi--text h2 {
   font-family: "Poppins";
-  font-size: 60px !important;
+  font-size: 40px !important;
   color: #1E1E1E !important;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
   margin: 0px;
-  margin-bottom: 20px;
 }
 .container__sobreMi--text p {
+  font-family: "Poppins";
+  font-size: 20px !important;
+  color: #1E1E1E !important;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
   margin: 0px;
+  margin: 0px;
+}
+.container__sobreMi--text p strong {
+  font-weight: 500;
 }
 
 .container-servicios {
@@ -240,20 +242,19 @@
   width: auto;
   height: auto;
   display: flex;
-  gap: 0px;
+  gap: 60px;
   padding: 40px 60px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 80px;
 }
 
 .container-servicios--card {
   width: 100%;
   height: 371px;
   display: flex;
-  gap: 0px;
+  gap: 50px;
   padding: 40px 60px;
   display: flex;
   flex-direction: row;
@@ -265,7 +266,7 @@
 }
 .container-servicios--card h3 {
   font-family: "Poppins";
-  font-size: 35px !important;
+  font-size: 30px !important;
   color: #FFFAF7 !important;
   font-style: normal;
   font-weight: 600;
@@ -274,7 +275,7 @@
 }
 .container-servicios--card p {
   font-family: "Poppins";
-  font-size: 25px !important;
+  font-size: 20px !important;
   color: #FFFAF7 !important;
   font-style: normal;
   font-weight: 300;
@@ -285,8 +286,7 @@
 
 .container-servicios--card-text {
   display: flex;
-  width: 70%;
-  gap: 30px;
+  gap: 20px;
   flex-direction: column;
 }
 
@@ -296,15 +296,27 @@
   border-radius: 20px;
 }
 
+.card-contenido {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 50px;
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
 .btn-servicios {
   width: 459px !important;
-  height: auto !important;
+  height: 50px !important;
   background-color: #AC0000 !important;
   color: #FFFAF7 !important;
   border-radius: 50px !important;
   border: none !important;
   cursor: pointer !important;
-  padding: 20px 30px;
+  padding: 13px !important;
   justify-content: center;
   align-items: center;
   gap: 10px;
@@ -375,28 +387,26 @@
   justify-content: center;
 }
 
-.swiper-wrappe {
-  margin: 20px !important;
-  padding: 50px !important;
+.swiper-wrapper {
+  padding-bottom: 50px !important;
+  gap: 10px;
 }
 
 .card-curso {
-  width: 60%;
-  height: auto;
+  width: 328px;
+  height: 550px;
   display: flex;
   gap: 0px;
   padding: 15px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  max-width: 400px;
+  justify-content: space-between;
+  align-items: flex-start;
   border-radius: 20px;
   background: #FFF;
   background: color(display-p3 1 1 1);
   box-shadow: 0px 4px 54px 0px rgba(46, 0, 0, 0.2);
   box-shadow: 0px 4px 54px 0px color(display-p3 0.1608 0 0 / 0.2);
-  gap: 10px;
 }
 .card-curso h3 {
   font-family: "Poppins";
@@ -418,21 +428,33 @@
   margin: 0px;
 }
 .card-curso img {
+  filter: grayscale(100%);
   width: 100%;
   height: auto;
   border-radius: 10px;
   align-self: stretch;
 }
 
+.swiper-slide-active img {
+  filter: grayscale(0) !important; /* Elimina el filtro al pasar el cursor */
+  transition: filter 0.3s ease !important; /* Añade una transición suave */
+}
+
+.card-curso--elementos {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .btn-curso {
-  width: auto !important;
+  width: 100% !important;
   height: auto !important;
   background-color: #AC0000 !important;
   color: #FFFAF7 !important;
   border-radius: 50px !important;
   border: none !important;
   cursor: pointer !important;
-  padding: 20px 30px;
+  padding: 13px !important;
   justify-content: center;
   align-items: center;
   gap: 10px;
@@ -506,21 +528,22 @@
 }
 
 .btn-invitaciones {
-  width: 459px !important;
-  height: auto !important;
+  width: 100% !important;
+  height: 50px !important;
   background-color: #AC0000 !important;
   color: #FFFAF7 !important;
   border-radius: 50px !important;
   border: none !important;
   cursor: pointer !important;
-  padding: 20px 30px;
+  margin-top: 20px;
+  padding: 13px !important;
   justify-content: center;
   align-items: center;
   gap: 10px;
 }
 .btn-invitaciones:hover {
-  background-color: #FFF !important;
-  color: #1E1E1E !important;
+  background-color: #620000 !important;
+  color: #FFFAF7 !important;
 }
 
 .container__libros {
@@ -851,6 +874,9 @@
   box-shadow: 0px 4px 54px 0px rgba(46, 0, 0, 0.1);
   box-shadow: 0px 4px 54px 0px color(display-p3 0.1608 0 0 / 0.1);
 }
+.container__contacto--form form {
+  width: 100%;
+}
 
 input.form-control, select.form-select {
   display: flex;
@@ -863,6 +889,11 @@ input.form-control, select.form-select {
   border-radius: 20px !important;
   background: #FCECE7 !important;
   background: color(display-p3 0.9793 0.9289 0.9073) !important;
+}
+
+select.form-select option:hover {
+  background: #AC0000 !important; /* Color de fondo al pasar el mouse */
+  color: #fff !important; /* Color de texto al pasar el mouse */
 }
 
 textarea.form-control {
@@ -924,12 +955,62 @@ textarea.form-control {
   width: 100%;
   height: auto;
   display: flex;
-  gap: 0px;
+  gap: 40px;
   padding: 85px 60px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+}
+.container__footer p {
+  font-family: "Poppins";
+  font-size: 15px !important;
+  color: #FFFAF7 !important;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin: 0px;
+  margin: 0px;
+}
+
+.container__footer--social {
+  display: flex;
+}
+
+.container__footer--redSocial {
+  font-family: "Poppins";
+  font-size: 60px !important;
+  color: #FFFAF7 !important;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 0px;
+  text-align: center;
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  text-decoration: none;
+  padding: 10px;
+}
+.container__footer--redSocial h4 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+  margin: 0px;
+  line-height: 100%;
+}
+.container__footer--redSocial div {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.container__footer--redSocial:hover {
+  color: #FFFAF7;
+  text-decoration: none;
+}
+.container__footer--redSocial:hover svg {
+  fill: #FFFAF7;
 }
 
 .container__footer--logo {
