--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@
 
 .container__menu--item {
   font-family: "Poppins";
-  font-size: 22px !important;
+  font-size: 18px !important;
   color: #FFFAF7 !important;
   font-style: normal;
   font-weight: 400;
@@ -70,7 +70,7 @@
   gap: 10px;
   text-decoration: none;
   font-family: "Poppins";
-  font-size: 22px !important;
+  font-size: 18px !important;
   color: #FFFAF7 !important;
   font-style: normal;
   font-weight: 400;
@@ -92,11 +92,11 @@
   height: 100dvh;
   display: flex;
   gap: 10px;
-  padding: 52px;
+  padding: 0px;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: flex-start;
+  align-items: flex-end;
   margin: 0px;
 }
 
@@ -105,13 +105,13 @@
   height: 100dvh;
   display: flex;
   gap: 10px;
-  padding: 52px;
+  padding: 52px 0px 0px 60px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   font-family: "Poppins";
-  font-size: 28px !important;
+  font-size: 20px !important;
   color: #FFFAF7 !important;
   font-style: normal;
   font-weight: 300;
@@ -135,8 +135,6 @@
 .container__home--img {
   display: flex;
   width: 50%;
-  bottom: 0px;
-  right: 0px;
 }
 
 .btn-home {
@@ -502,11 +500,11 @@
   width: 100%;
   height: auto;
   display: flex;
-  gap: 10px;
+  gap: 20px;
   padding: 0px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
   font-family: "Poppins";
   font-size: 20px !important;
@@ -519,7 +517,7 @@
 }
 .container__invitaciones--text p {
   font-family: "Poppins";
-  font-size: 25px !important;
+  font-size: 20px !important;
   color: #343434 !important;
   font-style: normal;
   font-weight: 300;
