--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 40px;
+  gap: 30px;
   border-radius: 40px;
 }
 
@@ -38,7 +38,7 @@
   font-weight: 400;
   line-height: normal;
   margin: 0px;
-  padding: 40px 0px;
+  padding: 5px 20px !important;
   border-radius: 50px;
   transition: background-color 0.3s, border-radius 0.3s;
 }
@@ -46,6 +46,7 @@
   background-color: #AC0000 !important;
   border-radius: 50px !important;
   cursor: pointer !important;
+  padding: 10px 20px !important;
 }
 
 .container__menu--item.active {
@@ -57,13 +58,14 @@
 
 .container__menu--btn {
   width: 179px !important;
-  height: 57px !important;
+  height: 50px !important;
   background-color: #AC0000 !important;
   color: #FFFAF7 !important;
+  font-size: 20px !important;
   border-radius: 50px !important;
   border: none !important;
   cursor: pointer !important;
-  padding: 20px 30px;
+  padding: 13px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -142,10 +144,11 @@
   height: auto !important;
   background-color: #AC0000 !important;
   color: #FFFAF7 !important;
+  font-size: 20px !important;
   border-radius: 50px !important;
   border: none !important;
   cursor: pointer !important;
-  padding: 20px 30px;
+  padding: 10px 30px !important;
   justify-content: center;
   align-items: center;
   gap: 10px;
@@ -193,7 +196,7 @@
 }
 .container__sobreMi--text h2 {
   font-family: "Poppins";
-  font-size: 40px !important;
+  font-size: 60px !important;
   color: #1E1E1E !important;
   font-style: normal;
   font-weight: 600;
@@ -264,7 +267,7 @@
 }
 .container-servicios--card h3 {
   font-family: "Poppins";
-  font-size: 30px !important;
+  font-size: 40px !important;
   color: #FFFAF7 !important;
   font-style: normal;
   font-weight: 600;
@@ -311,6 +314,7 @@
   height: 50px !important;
   background-color: #AC0000 !important;
   color: #FFFAF7 !important;
+  font-size: 20px !important;
   border-radius: 50px !important;
   border: none !important;
   cursor: pointer !important;
@@ -449,6 +453,7 @@
   height: auto !important;
   background-color: #AC0000 !important;
   color: #FFFAF7 !important;
+  font-size: 20px !important;
   border-radius: 50px !important;
   border: none !important;
   cursor: pointer !important;
@@ -506,13 +511,6 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  font-family: "Poppins";
-  font-size: 20px !important;
-  color: #343434 !important;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
-  margin: 0px;
   margin: 0px;
 }
 .container__invitaciones--text p {
@@ -526,10 +524,11 @@
 }
 
 .btn-invitaciones {
-  width: 100% !important;
-  height: 50px !important;
+  width: 60% !important;
+  height: auto !important;
   background-color: #AC0000 !important;
   color: #FFFAF7 !important;
+  font-size: 20px !important;
   border-radius: 50px !important;
   border: none !important;
   cursor: pointer !important;
@@ -557,7 +556,7 @@
 }
 .container__libros h2 {
   font-family: "Poppins";
-  font-size: 69px !important;
+  font-size: 60px !important;
   color: #FFFAF7 !important;
   font-style: normal;
   font-weight: 600;
@@ -567,7 +566,7 @@
 }
 .container__libros p {
   font-family: "Poppins";
-  font-size: 30px !important;
+  font-size: 20px !important;
   color: #FFFAF7 !important;
   font-style: normal;
   font-weight: 300;
@@ -635,6 +634,7 @@
   height: auto !important;
   background-color: #AC0000 !important;
   color: #FFFAF7 !important;
+  font-size: 15px !important;
   border-radius: 50px !important;
   border: none !important;
   cursor: pointer !important;
@@ -705,7 +705,7 @@
   font-weight: 600;
   line-height: normal;
   margin: 0px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 .container__videos--text p {
   font-family: "Poppins";
@@ -735,6 +735,25 @@
   width: 100%;
   height: 400px;
   border-radius: 11.164px;
+}
+
+.btn-videos {
+  width: 459px !important;
+  height: auto !important;
+  background-color: #AC0000 !important;
+  color: #FFFAF7 !important;
+  font-size: 20px !important;
+  border-radius: 50px !important;
+  border: none !important;
+  cursor: pointer !important;
+  padding: 10px 30px !important;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.btn-videos:hover {
+  background-color: #620000 !important;
+  color: #FFFAF7 !important;
 }
 
 .videosSwiper {
@@ -915,24 +934,22 @@ textarea.form-control {
 }
 
 .btn-submit {
-  width: #48060A !important;
-  height: #1E1E1E !important;
+  width: 120px !important;
+  height: auto !important;
   background-color: #AC0000 !important;
   color: #FFFAF7 !important;
-  border-radius: 10px 90px !important;
+  font-size: 20px !important;
+  border-radius: 50px !important;
   border: none !important;
   cursor: pointer !important;
-  font-family: Montserrat;
-  font-size: 20px !important;
-  color: normal !important;
-  font-style: 400;
-  font-weight: normal;
-  line-height: #1E1E1E;
-  margin: 0px;
+  padding: 5px 30px !important;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 .btn-submit:hover {
-  background-color: #FFF !important;
-  color: #1E1E1E !important;
+  background-color: #620000 !important;
+  color: #FFFAF7 !important;
 }
 
 .form-footer {
