--- a/css/styles.css
+++ b/css/styles.css
@@ -97,17 +97,17 @@
   padding: 0px;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: flex-end;
   margin: 0px;
 }
 
 .container__home--text {
-  width: 70%;
+  width: 65%;
   height: 100dvh;
   display: flex;
   gap: 10px;
-  padding: 52px 0px 0px 60px;
+  padding: 52px 50px 0px 60px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -119,11 +119,10 @@
   font-weight: 300;
   line-height: normal;
   margin: 0px;
-  z-index: 10;
 }
 .container__home--text h1 {
   font-family: "Poppins";
-  font-size: 70px !important;
+  font-size: 60px !important;
   color: #FFFAF7 !important;
   font-style: normal;
   font-weight: 700;
@@ -131,12 +130,12 @@
   margin: 0px;
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 20px;
 }
 
 .container__home--img {
-  display: flex;
-  width: 50%;
+  width: 38%;
+  position: absolute;
+  left: 60%;
 }
 
 .btn-home {
@@ -574,6 +573,17 @@
   margin: 0px;
   margin: 0px;
 }
+.container__libros h3 {
+  font-family: "Poppins";
+  font-size: 49px !important;
+  color: #FFFAF7 !important;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0px;
+  margin-bottom: 20px;
+  text-align: center;
+}
 
 .container__libros--compra--cards {
   width: 100%;
@@ -682,7 +692,7 @@
   padding: 85px 60px;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -705,7 +715,6 @@
   font-weight: 600;
   line-height: normal;
   margin: 0px;
-  margin-bottom: 30px;
 }
 .container__videos--text p {
   font-family: "Poppins";
@@ -715,8 +724,7 @@
   font-weight: 300;
   line-height: normal;
   margin: 0px;
-  padding-bottom: 10px;
-  margin: 0px;
+  margin-bottom: 30px;
 }
 
 .container__videos--principal {
@@ -729,7 +737,10 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 40px;
+  background-image: url("../img/adornovideo.webp");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .container__videos--principal iframe {
   width: 100%;
